@@ -63,6 +63,11 @@ You can run your application in dev mode that enables live coding using:
 ```shell script
 ./mvnw quarkus:dev
 ```
+or
+```shell script
+set MAVEN_OPTS=--enable-native-access=ALL-UNNAME
+./mvnw quarkus:dev
+```
 
 > **_NOTE:_**  Quarkus now ships with a Dev UI, which is available in dev mode only at <http://localhost:8080/q/dev/>.
 
